# tidgit

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  install.sh  pyproject.toml  tidgit
.github/workflows/: ci.yml  release.yml
Formula/: tidgit.rb
docs/: RELEASE.md
scripts/: generate_homebrew_formula.py
src/tidgit/: __init__.py  labels.py  main.py
testground/: chaos.sh  file_foo_0687000.txt  file_foo_2405000.txt  file_foo_3111000.py  file_qux_3611000.json  file_yak_7222000.js  file_yak_7590000.md  file_yak_8022000.md  file_zap_0656000.csv  file_zap_2390000.csv  file_zap_3802000.json
tests/: helpers.py  test_app_logic.py  test_cli.py  test_git_integration.py  test_parsing.py  test_smoke.py  test_ui_flow.py
