[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidgit"
version = "0.1.0"
description = "A minimal terminal Git TUI focused on core workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "tidgit contributors" }]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console :: Curses",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.scripts]
tidgit = "tidgit.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --cov=tidgit --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
